v0.6.1
- Template improvements
- Widget selection improvements
- Custom property selection improvements
- Fix properties being applied to wrong profile
- Just Select Widget method
- [aqab0N] Unicode fix
- Ability to restore deleted shortcut via 308

v0.6.0
- Version bump for Isengard repo.

v0.5.4
- Rollback for Helix repo - fixes incompatiblitly with some Helix skins.

v0.5.3
- [HitcherUK] Add shutdown timer functions
- Support for conditional group overrides
- [bambi73] Add default thumbnail browse option
- [bambi73] Add support for <propertypattern />
- Templates
- Path property for using shortcut as widgets
- Switch to audio nodes for Isengard
- Change action function
- New widget selection options
- Global overrides
- [roee88] Unicode fixes
- Speed improvements
- Minor bug fixes

v0.4.5
- [marcelveldt] fixed issues with assign thumbnail dialog.

v0.4.4
- [phate89] Use files.getDirectory to list playlists
- Just Select method - option to show 'None'
- New management dialog button 311 - select from defined thumbnails
- Conditions for available widgets and backgrounds
- Ability to check for shortcuts
- Speed improvements loading management dialog
- Fixes
- Updated language files from Transifex (from 8th December 2014)

v0.4.2
- [robweber] Fix for profiles shared via path substitution
- Integration with plugin.program.video.node.editor
- Change how submenuVisibility property is generated
- Skin and script default shortcuts now loaded from defaultID property
- Ability to set background and widget defaults based on defaultID
- Ability to skip warning when resetting all shortcuts
- Skin settings set to identify which backgrounds and widgets have been selected by user
- Window property to identify when additional management dialog has been launched
- Custom visibility properties are now honoured by management dialog
- Shortcuts always use video nodes (where appropriate) rather than library links
- Updated language files from Transifex (from 19th October 2014)

v0.4.0